<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="Degree">Degree</string>
    <string name="Logout">Log Out</string>
    <string name="Medical_Laboratories" tools:ignore="ExtraTranslation">Medical Laboratories</string>
    <string name="OR_FIND_YOUR_MEDICINES">OR FIND YOUR MEDICINES FROM OUR LIST</string>
    <string name="OR_search_for_test">OR SEARCH FOR TEST</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us">About us</string>
    <string name="accepted">Accepted</string>
    <string name="activate">Activate</string>
    <string name="active">active</string>
    <string name="add_address">ADD NEW ADDRESS</string>
    <string name="add_appointment">+ Appointment</string>
    <string name="add_image">Add Image</string>
    <string name="add_medication_appointment">+ Medication Appointment</string>
    <string name="add_new_discount_card">Add New Card</string>
    <string name="add_phone_number">Please enter your phone number</string>
    <string name="add_prescription_photo">Add Prescription photo or Medicine photo</string>
    <string name="add_promo_code">Add promo code</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_your_medical_report">Add your Medical Report photo here</string>
    <string name="address">Address</string>
    <string name="address_book">Address Book</string>
    <string name="advanced_search">Search</string>
    <string name="all">All</string>
    <string name="all_services">All Services</string>
    <string name="all_services_desc">Medica have a large database of Doctor, Medicines, Hospitals, Ambulance, etc.</string>
    <string name="ambulance">Ambulance</string>
    <string name="answer">Answer</string>
    <string name="any">Any</string>
    <string name="app_name">Medica</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appointment">Appointment</string>
    <string name="appointment_detail">Appointment Detail</string>
    <string name="appointment_in_lab">Appointment in laboratory</string>
    <string name="appointment_in_radiology">Appointment in radiology center</string>
    <string name="appointment_title">Appointment title</string>
    <string name="appointment_with_doc">Appointment with doctor</string>
    <string name="ar">ع</string>
    <string name="are_you_looking_for">Are you looking for...</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="ashe3a">x-ray</string>
    <string name="ask_about_corona">Ask About Corona</string>
    <string name="available_24_hour">Available 24 Hour</string>
    <string name="available_time">Available Times</string>
    <string name="back">Back</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="book">Book</string>
    <string name="book_now">Book Now</string>
    <string name="book_without_login">Book Without Login</string>
    <string name="booking_detial">YOUR BOOKING DETAILS</string>
    <string name="booking_with_another_speciality">booking with another speciality</string>
    <string name="bottom_sheet_behavior" translatable="false">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="branch_name">branch name</string>
    <string name="buy">Buy</string>
    <string name="by_continuing_you_agree_to_our_terms_condiction">By continuing you agree to our terms &amp; conditions</string>
    <string name="calendar" translatable="false">Calendar</string>
    <string name="call">Call</string>
    <string name="call_us">Have a trouble call us</string>
    <string name="calling">Calling...</string>
    <string name="camera">Camera</string>
    <string name="cancel">cancel</string>
    <string name="cancel_reservation">Cancel reservation</string>
    <string name="cancled">canceled</string>
    <string name="card_number">Card Number :</string>
    <string name="cart">Cart</string>
    <string name="cart_items">Cart Items:</string>
    <string name="cart_total">Cart total:</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="change">Change</string>
    <string name="change_appointment">Change Appointment</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="checkout">CHECKOUT</string>
    <string name="chip_text">Chip text</string>
    <string name="choose">Choose</string>
    <string name="choose_another_area">Choose another area</string>
    <string name="choose_degree">Choose Degree</string>
    <string name="choose_language">Choose Medica Language</string>
    <string name="choose_medical_institution">Choose Medical Insurance</string>
    <string name="choose_region">Choose Region</string>
    <string name="choose_service_type">Choose service type</string>
    <string name="choose_speciality">Choose Speciality</string>
    <string name="choose_state">Choose State</string>
    <string name="city">City</string>
    <string name="clear_text_end_icon_content_description" translatable="false">Clear text</string>
    <string name="clinics">Clinics</string>
    <string name="closest_to">Closest to</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="en">EN</string>
    <string name="favorite">Favorite</string>
    <string name="help">Help</string>
    <string name="hot_offers">Hot Offers</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="language">Language</string>
    <string name="live_chat">Live Chat</string>
    <string name="login_frist">You need to login first</string>
    <string name="make_suggestion">Make a Suggestion</string>
    <string name="medica_card">Medica Card</string>
    <string name="menu">Menu</string>
    <string name="ok">OK</string>
    <string name="online_doctors">Online Doctors</string>
    <string name="orders">Orders</string>
    <string name="organizer">Organizer</string>
    <string name="patient_profile">Patient Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="signup_for_doctor">Medica For Doctors</string>
    <string name="terms_cond">Terms &amp; Condition</string>
</resources>